# dependent-parser

./: .gitignore  ChangeLog.md  README.md  dependent-parser.cabal  stack.yaml
src/Data/Parser/: Dependent.hs
src/Data/Parser/Dependent/: Internal.hs
test/: Spec.hs
test/Data/Parser/: DependentSpec.hs
