Name:                   dependent-parser
Version:                0.0.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Parser.Dependent
                        Data.Parser.Dependent.Internal
--  Other-Modules:        
  Build-Depends:        base >= 4 && < 5
                      , text >= 1.2.2.1
-- Test Suite Code
                      , parsers
                      , regex-genex
                      , attoparsec
                      , contravariant


Source-Repository head
  Type:                 git
--  Location:             
